charts/silverbullet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: silverbullet
  namespace: silverbullet
spec:
  hostnames:
    - notes.int.imdevinc.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - matches:
        - path:
            type: Exact
            value: /service_worker.js
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
    - matches:
        - path:
            type: RegularExpression
            value: ^\./client/.*
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
      filters:
        - extensionRef:
              group: traefik.io
              kind: Middleware
              name: oidc
          type: ExtensionRef
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc
spec:
  plugin:
    traefik-oidc-auth:
      Provider:
        ClientId: urn:k8s:secret:oidc:client-id
        ClientSecret: urn:k8s:secret:oidc:client-secret
        TokenValidation: IdToken
        Url: https://login.int.imdevinc.com
      Scopes:
        - openid
        - profile
        - email
      Secret: PMYZT3D2J4da20RsSIMMZaArKI6d3pxt
